--- a/Week-02-DS-Overview-and-Data/Exercise-Rp2.ipynb
+++ b/Week-02-DS-Overview-and-Data/Exercise-Rp2.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "[125 rows x 2 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
        "[104 rows x 2 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,20 +524,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gq/x929blgn4fn52xmy7wtz4qg80000gn/T/ipykernel_39542/1207251917.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/gq/x929blgn4fn52xmy7wtz4qg80000gn/T/ipykernel_39814/1207251917.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_food_calories_weight['calories_day'] = pd.to_numeric(df_food_calories_weight['calories_day'], errors=\"coerce\")\n",
-      "/var/folders/gq/x929blgn4fn52xmy7wtz4qg80000gn/T/ipykernel_39542/1207251917.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/gq/x929blgn4fn52xmy7wtz4qg80000gn/T/ipykernel_39814/1207251917.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
        "[101 rows x 2 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,12 +724,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "#os.rename(\"data/Ask A Manager Salary Survey 2021 (Responses) - Form Responses 1.tsv\", \"data/Manager_salary_survey.tsv\")"
+    "# change the name back because git was not letting me push the file \n",
+    "#os.rename(\"data/Ask A Manager Salary Survey 2021 (Responses) - Form Responses 1.tsv\", \"data/Manager_salary_survey.tsv\")\n",
+    "os.rename(\"data/Manager_salary_survey.tsv\",\"data/Ask A Manager Salary Survey 2021 (Responses) - Form Responses 1.tsv\")\n",
+    "\n"
    ]
   },
   {
@@ -750,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +767,7 @@
    "source": [
     "# Count by hand. I’m dead serious.\n",
     "\n",
-    "df_manager_survey = pd.read_csv(\"data/Manager_salary_survey.tsv\", sep =\"\\t\")\n",
+    "df_manager_survey = pd.read_csv(\"data/Ask A Manager Salary Survey 2021 (Responses) - Form Responses 1.tsv\", sep =\"\\t\")\n",
     "len(df_manager_survey)\n",
     "print(\"We loaded\",len(df_manager_survey),\"rows\")"
    ]
@@ -778,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1193,7 @@
        "[28062 rows x 18 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1248,7 @@
        "Name: count, Length: 1219, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1381,7 @@
        "8              College degree       Woman  White  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1411,7 +1414,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1574,7 @@
        "44    Man  White  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1591,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1615,7 @@
        "Name: count, Length: 76, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1624,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1648,7 @@
        "Name: count, Length: 66, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1672,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1689,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1710,7 +1713,7 @@
        "Name: count, Length: 72, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1730,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1921,7 +1924,7 @@
        "47  Woman  White  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1932,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1943,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2134,7 +2137,7 @@
        "47  Woman  White  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2145,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2214,7 +2217,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2235,7 +2238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2252,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2443,7 +2446,7 @@
        "47  Woman  White  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2463,7 +2466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2588,7 +2591,7 @@
        "[66 rows x 3 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2609,7 +2612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2620,7 +2623,7 @@
        "Name: timestamp, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2636,7 +2639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2761,7 +2764,7 @@
        "[66 rows x 3 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
