--- a/Week-02-DS-Overview-and-Data/Exercise-Rp2.ipynb
+++ b/Week-02-DS-Overview-and-Data/Exercise-Rp2.ipynb
@@ -531,13 +531,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gq/x929blgn4fn52xmy7wtz4qg80000gn/T/ipykernel_39814/1207251917.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/gq/x929blgn4fn52xmy7wtz4qg80000gn/T/ipykernel_40072/1207251917.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_food_calories_weight['calories_day'] = pd.to_numeric(df_food_calories_weight['calories_day'], errors=\"coerce\")\n",
-      "/var/folders/gq/x929blgn4fn52xmy7wtz4qg80000gn/T/ipykernel_39814/1207251917.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/gq/x929blgn4fn52xmy7wtz4qg80000gn/T/ipykernel_40072/1207251917.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -728,11 +728,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "#import os\n",
     "# change the name back because git was not letting me push the file \n",
     "#os.rename(\"data/Ask A Manager Salary Survey 2021 (Responses) - Form Responses 1.tsv\", \"data/Manager_salary_survey.tsv\")\n",
-    "os.rename(\"data/Manager_salary_survey.tsv\",\"data/Ask A Manager Salary Survey 2021 (Responses) - Form Responses 1.tsv\")\n",
-    "\n"
+    "#os.rename(\"data/Manager_salary_survey.tsv\",\"data/Ask A Manager Salary Survey 2021 (Responses) - Form Responses 1.tsv\")"
    ]
   },
   {
